// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`themeToCssVars > snapshot des tokens — preset clean-light 1`] = `
{
  "classes": [
    "lm-cards-solid",
    "lm-thumb-left",
    "lm-density-comfortable",
    "lm-social-right",
    "lm-bg-gradient",
  ],
  "vars": {
    "--lm-accent": "rgba(194, 65, 12, 1)",
    "--lm-bg": "linear-gradient(180deg, rgba(253, 246, 238, 1), rgba(234, 223, 211, 1))",
    "--lm-bg-blur": "0px",
    "--lm-bg-focal": "60% 30%",
    "--lm-card-bg": "rgba(255, 255, 255, 0.94)",
    "--lm-card-bg-fallback": "rgba(255, 255, 255, 1)",
    "--lm-card-blur": "0px",
    "--lm-card-border": "rgba(17, 19, 24, 0.1)",
    "--lm-card-height": "92px",
    "--lm-card-radius": "24px",
    "--lm-control-bg": "rgba(255, 255, 255, 0.86)",
    "--lm-control-border": "rgba(17, 19, 24, 0.35)",
    "--lm-font-body": "'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif",
    "--lm-font-display": "'Kaushan Script', 'Brush Script MT', cursive",
    "--lm-font-hand": "'Caveat', 'Segoe Print', cursive",
    "--lm-hairline": "rgba(17, 19, 24, 0.22)",
    "--lm-hero-scrim": "radial-gradient(ellipse 85% 55% at 22% 48%, rgba(247, 245, 242, 0.315), rgba(247, 245, 242, 0) 70%)",
    "--lm-name-scale": "1",
    "--lm-overlay": "rgba(247, 245, 242, 1)",
    "--lm-overlay-gradient": "linear-gradient(180deg, rgba(247, 245, 242, 0.09) 0%, rgba(247, 245, 242, 0.198) 25%, rgba(247, 245, 242, 0.495) 45%, rgba(247, 245, 242, 0.774) 70%, rgba(247, 245, 242, 0.864) 85%, rgba(247, 245, 242, 0.9) 100%)",
    "--lm-overlay-strength": "0.9",
    "--lm-shadow-text": "rgba(247, 245, 242, 0.55)",
    "--lm-social-radius": "50%",
    "--lm-stat-glow": "rgba(255, 176, 103, 0.18)",
    "--lm-surface": "rgba(255, 255, 255, 0.78)",
    "--lm-surface-strong": "rgba(255, 255, 255, 0.94)",
    "--lm-text": "rgba(17, 19, 24, 1)",
    "--lm-text-muted": "rgba(61, 66, 77, 0.859)",
  },
}
`;

exports[`themeToCssVars > snapshot des tokens — preset emerald-night 1`] = `
{
  "classes": [
    "lm-cards-glass",
    "lm-thumb-left",
    "lm-density-comfortable",
    "lm-social-right",
    "lm-bg-image",
  ],
  "vars": {
    "--lm-accent": "rgba(95, 224, 168, 1)",
    "--lm-bg": "rgba(3, 16, 12, 1)",
    "--lm-bg-blur": "0px",
    "--lm-bg-focal": "60% 30%",
    "--lm-card-bg": "rgba(7, 32, 26, 0.62)",
    "--lm-card-bg-fallback": "rgba(7, 32, 26, 0.87)",
    "--lm-card-blur": "20px",
    "--lm-card-border": "rgba(166, 245, 210, 0.16)",
    "--lm-card-height": "92px",
    "--lm-card-radius": "28px",
    "--lm-control-bg": "rgba(7, 32, 26, 0.7)",
    "--lm-control-border": "rgba(255, 255, 255, 0.35)",
    "--lm-font-body": "'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif",
    "--lm-font-display": "'Marck Script', 'Brush Script MT', cursive",
    "--lm-font-hand": "'Caveat', 'Segoe Print', cursive",
    "--lm-hairline": "rgba(255, 255, 255, 0.22)",
    "--lm-hero-scrim": "radial-gradient(ellipse 85% 55% at 22% 48%, rgba(3, 16, 12, 0.315), rgba(3, 16, 12, 0) 70%)",
    "--lm-name-scale": "1",
    "--lm-overlay": "rgba(3, 16, 12, 1)",
    "--lm-overlay-gradient": "linear-gradient(180deg, rgba(3, 16, 12, 0.09) 0%, rgba(3, 16, 12, 0.198) 25%, rgba(3, 16, 12, 0.495) 45%, rgba(3, 16, 12, 0.774) 70%, rgba(3, 16, 12, 0.864) 85%, rgba(3, 16, 12, 0.9) 100%)",
    "--lm-overlay-strength": "0.9",
    "--lm-shadow-text": "rgba(3, 16, 12, 0.55)",
    "--lm-social-radius": "50%",
    "--lm-stat-glow": "rgba(31, 181, 122, 0.18)",
    "--lm-surface": "rgba(7, 32, 26, 0.7)",
    "--lm-surface-strong": "rgba(7, 32, 26, 0.94)",
    "--lm-text": "rgba(255, 255, 255, 1)",
    "--lm-text-muted": "rgba(255, 255, 255, 0.62)",
  },
}
`;

exports[`themeToCssVars > snapshot des tokens — preset midnight-blue 1`] = `
{
  "classes": [
    "lm-cards-glass",
    "lm-thumb-left",
    "lm-density-comfortable",
    "lm-social-right",
    "lm-bg-image",
  ],
  "vars": {
    "--lm-accent": "rgba(122, 167, 255, 1)",
    "--lm-bg": "rgba(4, 8, 22, 1)",
    "--lm-bg-blur": "0px",
    "--lm-bg-focal": "60% 30%",
    "--lm-card-bg": "rgba(11, 19, 48, 0.6)",
    "--lm-card-bg-fallback": "rgba(11, 19, 48, 0.85)",
    "--lm-card-blur": "20px",
    "--lm-card-border": "rgba(157, 184, 255, 0.18)",
    "--lm-card-height": "92px",
    "--lm-card-radius": "28px",
    "--lm-control-bg": "rgba(11, 19, 48, 0.68)",
    "--lm-control-border": "rgba(255, 255, 255, 0.35)",
    "--lm-font-body": "'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif",
    "--lm-font-display": "'Yellowtail', 'Brush Script MT', cursive",
    "--lm-font-hand": "'Caveat', 'Segoe Print', cursive",
    "--lm-hairline": "rgba(255, 255, 255, 0.22)",
    "--lm-hero-scrim": "radial-gradient(ellipse 85% 55% at 22% 48%, rgba(4, 8, 22, 0.322), rgba(4, 8, 22, 0) 70%)",
    "--lm-name-scale": "1",
    "--lm-overlay": "rgba(4, 8, 22, 1)",
    "--lm-overlay-gradient": "linear-gradient(180deg, rgba(4, 8, 22, 0.092) 0%, rgba(4, 8, 22, 0.202) 25%, rgba(4, 8, 22, 0.506) 45%, rgba(4, 8, 22, 0.791) 70%, rgba(4, 8, 22, 0.883) 85%, rgba(4, 8, 22, 0.92) 100%)",
    "--lm-overlay-strength": "0.92",
    "--lm-shadow-text": "rgba(4, 8, 22, 0.55)",
    "--lm-social-radius": "50%",
    "--lm-stat-glow": "rgba(76, 125, 255, 0.18)",
    "--lm-surface": "rgba(11, 19, 48, 0.7)",
    "--lm-surface-strong": "rgba(11, 19, 48, 0.94)",
    "--lm-text": "rgba(255, 255, 255, 1)",
    "--lm-text-muted": "rgba(255, 255, 255, 0.62)",
  },
}
`;

exports[`themeToCssVars > snapshot des tokens — preset rose-gold 1`] = `
{
  "classes": [
    "lm-cards-glass",
    "lm-thumb-left",
    "lm-density-comfortable",
    "lm-social-right",
    "lm-bg-image",
  ],
  "vars": {
    "--lm-accent": "rgba(245, 184, 166, 1)",
    "--lm-bg": "rgba(20, 10, 12, 1)",
    "--lm-bg-blur": "0px",
    "--lm-bg-focal": "60% 30%",
    "--lm-card-bg": "rgba(42, 21, 24, 0.58)",
    "--lm-card-bg-fallback": "rgba(42, 21, 24, 0.83)",
    "--lm-card-blur": "20px",
    "--lm-card-border": "rgba(255, 217, 204, 0.2)",
    "--lm-card-height": "92px",
    "--lm-card-radius": "22px",
    "--lm-control-bg": "rgba(42, 21, 24, 0.66)",
    "--lm-control-border": "rgba(255, 255, 255, 0.35)",
    "--lm-font-body": "'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif",
    "--lm-font-display": "'Caveat Brush', 'Brush Script MT', cursive",
    "--lm-font-hand": "'Reenie Beanie', 'Segoe Print', cursive",
    "--lm-hairline": "rgba(255, 255, 255, 0.22)",
    "--lm-hero-scrim": "radial-gradient(ellipse 85% 55% at 22% 48%, rgba(20, 10, 12, 0.308), rgba(20, 10, 12, 0) 70%)",
    "--lm-name-scale": "1",
    "--lm-overlay": "rgba(20, 10, 12, 1)",
    "--lm-overlay-gradient": "linear-gradient(180deg, rgba(20, 10, 12, 0.088) 0%, rgba(20, 10, 12, 0.194) 25%, rgba(20, 10, 12, 0.484) 45%, rgba(20, 10, 12, 0.757) 70%, rgba(20, 10, 12, 0.845) 85%, rgba(20, 10, 12, 0.88) 100%)",
    "--lm-overlay-strength": "0.88",
    "--lm-shadow-text": "rgba(20, 10, 12, 0.55)",
    "--lm-social-radius": "50%",
    "--lm-stat-glow": "rgba(232, 139, 122, 0.18)",
    "--lm-surface": "rgba(42, 21, 24, 0.7)",
    "--lm-surface-strong": "rgba(42, 21, 24, 0.94)",
    "--lm-text": "rgba(255, 255, 255, 1)",
    "--lm-text-muted": "rgba(255, 255, 255, 0.62)",
  },
}
`;

exports[`themeToCssVars > snapshot des tokens — preset sunset 1`] = `
{
  "classes": [
    "lm-cards-glass",
    "lm-thumb-left",
    "lm-density-comfortable",
    "lm-social-right",
    "lm-bg-image",
  ],
  "vars": {
    "--lm-accent": "rgba(255, 176, 103, 1)",
    "--lm-bg": "rgba(3, 5, 10, 1)",
    "--lm-bg-blur": "0px",
    "--lm-bg-focal": "60% 30%",
    "--lm-card-bg": "rgba(10, 12, 18, 0.62)",
    "--lm-card-bg-fallback": "rgba(10, 12, 18, 0.87)",
    "--lm-card-blur": "20px",
    "--lm-card-border": "rgba(255, 255, 255, 0.14)",
    "--lm-card-height": "92px",
    "--lm-card-radius": "28px",
    "--lm-control-bg": "rgba(10, 12, 18, 0.7)",
    "--lm-control-border": "rgba(255, 255, 255, 0.35)",
    "--lm-font-body": "'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif",
    "--lm-font-display": "'Kaushan Script', 'Brush Script MT', cursive",
    "--lm-font-hand": "'Caveat', 'Segoe Print', cursive",
    "--lm-hairline": "rgba(255, 255, 255, 0.22)",
    "--lm-hero-scrim": "radial-gradient(ellipse 85% 55% at 22% 48%, rgba(3, 5, 10, 0.315), rgba(3, 5, 10, 0) 70%)",
    "--lm-name-scale": "1",
    "--lm-overlay": "rgba(3, 5, 10, 1)",
    "--lm-overlay-gradient": "linear-gradient(180deg, rgba(3, 5, 10, 0.09) 0%, rgba(3, 5, 10, 0.198) 25%, rgba(3, 5, 10, 0.495) 45%, rgba(3, 5, 10, 0.774) 70%, rgba(3, 5, 10, 0.864) 85%, rgba(3, 5, 10, 0.9) 100%)",
    "--lm-overlay-strength": "0.9",
    "--lm-shadow-text": "rgba(3, 5, 10, 0.55)",
    "--lm-social-radius": "50%",
    "--lm-stat-glow": "rgba(60, 110, 255, 0.18)",
    "--lm-surface": "rgba(10, 12, 18, 0.7)",
    "--lm-surface-strong": "rgba(10, 12, 18, 0.94)",
    "--lm-text": "rgba(255, 255, 255, 1)",
    "--lm-text-muted": "rgba(255, 255, 255, 0.62)",
  },
}
`;
